--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seven letters</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html" onclick="changeLanguage('en')">English</a></li>
+        <li><a href="index.html" onclick="changeLanguage('ar')">عربي</a></li>
+      </ul>
+    </nav>
+    <main>
+      <h1 data-i18n="welcome_message"></h1>
+      <p data-i18n="about_us"></p>
+    </main>
+  </body>
 </html>
