--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="ar">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seven letters</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <nav>
@@ -17,5 +16,6 @@
       <h1 data-i18n="welcome_message"></h1>
       <p data-i18n="about_us"></p>
     </main>
+    <script src="js/index.js"></script>
   </body>
 </html>
