Add fonts and images

--- a/index.html
+++ b/index.html
@@ -8,16 +8,50 @@
     <link id="styles-link" rel="stylesheet" href="./css/style-ar.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html" onclick="changeLanguage('en')">English</a></li>
-        <li><a href="index.html" onclick="changeLanguage('ar')">عربي</a></li>
-      </ul>
-    </nav>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#who-us" data-i18n="who-us"></a></li>
+          <li><a href="#creativity" data-i18n="creativity"></a></li>
+          <li><a href="#team" data-i18n="team"></a></li>
+          <li><a href="#serves" data-i18n="serves"></a></li>
+        </ul>
+        <ul class="languages">
+          <li>
+            <a href="index.html" onclick="changeLanguage('en')">English</a>
+          </li>
+          <li>
+            <a href="index.html" onclick="changeLanguage('ar')">عربي</a>
+          </li>
+        </ul>
+        <img src="./images/logo.png" alt="logo" />
+      </nav>
+    </header>
     <main>
-      <h1 data-i18n="welcome_message"></h1>
-      <p data-i18n="about_us"></p>
+      <section id="who-us">
+        <div class="container">
+          <div class="log-container">
+            <img src="./images/logo-2.png" alt="logo" />
+            <div class="welcom">
+              <h1 data-i18n="welcome-p1"></h1>
+              <h1 data-i18n="welcome-p2"></h1>
+            </div>
+          </div>
+          <div class="arabic-man-container">
+            <img
+              class="arabic-man"
+              src="./images/person.png"
+              alt="arabic-man"
+            />
+          </div>
+          <img class="line" src="./images/line.png" alt="line" />
+        </div>
+      </section>
+      <section id="creativity"></section>
+      <section id="team"></section>
+      <section id="servies"></section>
     </main>
+    <footer></footer>
     <script src="js/index.js"></script>
   </body>
 </html>
