Finish section two

--- a/index.html
+++ b/index.html
@@ -52,9 +52,17 @@
       <section id="creativity">
         <div class="container">
             <div class="creativity-text">
-              <h1 data-i18n="welcome-p1"></h1>
-              <h1 data-i18n="welcome-p2"></h1>
+              <h1 data-i18n="who-us"></h1>
+              <ul>
+                <li><p data-i18n="about_us1"></p></li>
+                <li> 
+                    <p data-i18n="about_us2"></p>
+                    <p data-i18n="about_us3"></p>
+                  </li>
+                <li><p data-i18n="about_us3"></p></li>
+              </ul>
             </div>
+            <img class="line" src="./images/line.png" alt="line" />
           </div>
         </div>
       </section>
