Add creativity section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </header>
     <main>
-      <section id="who-us">
+      <section id="home">
         <div class="container">
           <div class="log-container">
             <img src="./images/logo-2.png" alt="logo" />
@@ -49,11 +49,11 @@
           <img class="line" src="./images/line.png" alt="line" />
         </div>
       </section>
-      <section id="creativity">
+      <section id="who-us">
         <div class="container">
-            <div class="creativity-text">
-              <h1 data-i18n="who-us"></h1>
+            <div class="who-us-text">
               <ul>
+                <li><h1 data-i18n="who-us"></h1></li>
                 <li><p data-i18n="about_us1"></p></li>
                 <li> 
                     <p data-i18n="about_us2"></p>
@@ -66,8 +66,59 @@
           </div>
         </div>
       </section>
-      <section id="team"></section>
-      <section id="servies"></section>
+      <section id="creativity">
+        <div class="container">
+          <h1 data-i18n="why-creative"></h1>
+          <div class="boxs">
+            <div class="box">
+              <div class="box-header">
+                <h3  data-i18n="box-header-1" ></h3>
+                <div class="icon">
+                  <img src="./images/balance.png" alt="box-1" />
+                </div>
+              </div> 
+              <p  data-i18n="box-p-1"></p>
+            </div>
+            <div class="box">
+              <div class="box-header">
+                <h3  data-i18n="box-header-2" ></h3>
+                <div class="icon">
+                  <img src="./images/win.png" alt="box-1" />
+                </div>
+              </div> 
+              <p  data-i18n="box-p-2"></p>
+            </div>
+            <div class="box">
+              <div class="box-header">
+                <h3  data-i18n="box-header-3" ></h3>
+                <div class="icon">
+                  <img src="./images/win.png" alt="box-1" />
+                </div>
+              </div> 
+              <p  data-i18n="box-p-3"></p>
+            </div>
+          </div>
+          <div class="images">
+            <img src="./images/section-three.png" alt="camels">
+            <img class="cross-line" src="./images/crossline.png" alt="cross-line">
+
+          </div>
+        </div>
+      </section>
+      <section id="team">
+        <div class="container">
+          <h1 data-i18n="team"></h1>
+          <img class="team" src="./images/team.png" alt="team" />
+          <img class="line" src="./images/line.png" alt="line" />
+        </div>
+      </section>
+      <section id="servies">
+
+      </section>
+      <section id="media">
+        
+      </section>
+
     </main>
     <footer></footer>
     <script src="js/index.js"></script>
