Add creativity section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
       </section>
       <section id="creativity">
         <div class="container">
-          <h1 data-i18n="why-creative"></h1>
+          <div class="creativity-title">
+            <div class="circle circle1"></div>
+            <h1 data-i18n="why-creative"></h1>
+            <div class="circle circle2"></div>
+          </div>
           <div class="boxs">
             <div class="box">
               <div class="box-header">
