Add servies section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,24 @@
         </div>
       </section>
       <section id="servies">
-
+        <div class="container">
+          <div class="servies-title">
+            <div class="circle-5 circle3"></div>
+            <h1 data-i18n="serves"></h1>
+            <div class="circle-5 circle4"></div>
+          </div>
+          <div class="box-serves">
+            <p data-i18n="serves-box"></p>
+          </div>
+          <div class="box-serves-p">
+            <p data-i18n="serves-box-p1"></p>
+            <p data-i18n="serves-box-p1"></p>
+          </div>
+          <div class="serves-images">
+            <img src="./images/cc.png" alt="camera">
+            <img src="./images/nm.png" alt="laptop">
+          </div>
+        </div>
       </section>
       <section id="media">
         
