Add servies section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
             <img src="./images/cc.png" alt="camera">
             <img src="./images/nm.png" alt="laptop">
           </div>
+          <img class="line" src="./images/line.png" alt="line" />
+
         </div>
       </section>
       <section id="media">
