Add images to serves section

--- a/index.html
+++ b/index.html
@@ -112,30 +112,38 @@
       <section id="team">
         <div class="container">
           <h1 data-i18n="team"></h1>
-          <img class="team" src="./images/team.png" alt="team" />
+          <div class="team-img">
+            <img src="./images/team.png" alt="team" />
+          </div>
           <img class="line" src="./images/line.png" alt="line" />
         </div>
       </section>
       <section id="servies">
         <div class="container">
           <div class="servies-title">
-            <div class="circle-5 circle3"></div>
+            <img src="./images/Line-1.png" alt="dot" class="right">
             <h1 data-i18n="serves"></h1>
-            <div class="circle-5 circle4"></div>
-          </div>
+            <img src="./images/Line-2.png" alt="dot" class="right">
+          </div> 
           <div class="box-serves">
+            <div class="digital-container">
+              <h4  data-i18n="digital-marketing"></h4>
+            </div>
             <p data-i18n="serves-box"></p>
           </div>
           <div class="box-serves-p">
             <p data-i18n="serves-box-p1"></p>
-            <p data-i18n="serves-box-p1"></p>
+            <p data-i18n="serves-box-p2"></p>
           </div>
           <div class="serves-images">
-            <img src="./images/cc.png" alt="camera">
-            <img src="./images/nm.png" alt="laptop">
+            <div class="img-container">
+              <img src="./images/cc.png" alt="camera">
+            </div>
+            <div class="img-container">
+              <img src="./images/nm.png" alt="laptop">
+            </div>
           </div>
           <img class="line" src="./images/line.png" alt="line" />
-
         </div>
       </section>
       <section id="media">
