--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <section id="creativity">
         <div class="container">
           <div class="creativity-title">
-            <div class="circle circle1"></div>
+            <img src="./images/line-5.png" alt="dot" class="right">
             <h1 data-i18n="why-creative"></h1>
-            <div class="circle circle2"></div>
+            <img src="./images/line-4.png" alt="dot" class="right">
           </div>
           <div class="boxs">
             <div class="box">
@@ -114,6 +114,9 @@
           <h1 data-i18n="team"></h1>
           <div class="team-img">
             <img src="./images/team.png" alt="team" />
+            <div class="team-p-container">
+              <p>
+              <span>لدينا </span> فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من <span>الجــــــــــــــــــــــــودة والاحترافية.</span></p> </div>
           </div>
           <img class="line" src="./images/line.png" alt="line" />
         </div>
