Finish servies section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,30 @@
         </div>
       </section>
       <section id="media">
-        
+        <div class="container">
+          <div class="container">
+          <div class="media-container">
+            <div class="box-media">
+              <div class="creative-container">
+                <h4  data-i18n="creative-content"></h4>
+              </div>
+              <p data-i18n="content-box"></p>
+            </div>
+            <div class="box-media-p">
+                <p data-i18n="content-box-p1"></p>
+                <p data-i18n="content-box-p2"></p>
+            </div>
+          </div>
+          <div class="lamp-container">
+            <img src="./images/lamp.png" alt="lamp">
+          </div>
+      
+        </div>
+        <div class="images">
+          <!-- <img src="./images/circle.png" alt="circle" class="circle">
+          <img class="cross-line-left" src="./images/crossline-left.png" alt="cross-line"> -->
+        </div>
+      </div>
       </section>
 
     </main>
