Finish servies section

--- a/index.html
+++ b/index.html
@@ -167,13 +167,67 @@
           <div class="lamp-container">
             <img src="./images/lamp.png" alt="lamp">
           </div>
-      
+          <!-- <img class="cross-line-left" src="./images/crossline-left.png" alt="cross-line">  -->
         </div>
         <div class="images">
-          <!-- <img src="./images/circle.png" alt="circle" class="circle">
-          <img class="cross-line-left" src="./images/crossline-left.png" alt="cross-line"> -->
+            <img src="./images/line.png" alt="">
         </div>
       </div>
+      </section>
+      <section id="multi">
+        <div class="container">
+          <div class="right-container">
+            <p data-i18n="chart"></p>
+            <p data-i18n="chart1"></p>
+            <p data-i18n="chart2"></p>
+            <p data-i18n="chart3"></p>
+            <p data-i18n="chart4"></p>
+            <img src="./images/chart.png"/>
+          </div>
+          <div class="left-container">
+            <p data-i18n="account-mange" ></p>
+            <p data-i18n="account-mange-p"></p>
+            <p data-i18n="media-data"></p>
+          </div>
+        </div>
+        <div class="container">
+          <p></p>
+          <ul>
+            <li>
+              <p></p>
+
+            </li>
+            <li>
+              <p></p>
+
+            </li>
+            <li>
+              <p></p>
+
+            </li>
+
+          </ul>
+          <p></p>
+          <p></p>
+          <ul>
+            <li>
+              <p></p>
+
+            </li>
+            <li>
+              <p></p>
+
+            </li>
+            <li>
+              <p></p>
+
+            </li>
+            <li>
+              <p></p>
+
+            </li>
+          </ul>
+        </div>
       </section>
 
     </main>
