Add multi media section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Seven letters</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link id="styles-link" rel="stylesheet" href="./css/style-ar.css" />
   </head>
   <body>
@@ -190,46 +191,40 @@
             <p data-i18n="media-data"></p>
           </div>
         </div>
-        <div class="container">
-          <p></p>
+        <p class="multi-container-2-header" data-i18n="multi-container-2-header"></p>
+
+      </section>
+      <section id="compelete">
+        <div class="container-2">
           <ul>
             <li>
-              <p></p>
-
+              <p data-i18n="prints"></p>
             </li>
             <li>
-              <p></p>
-
+              <p data-i18n="video-editing"></p>
             </li>
             <li>
-              <p></p>
-
+              <p data-i18n="motion-graphics"></p>
             </li>
-
           </ul>
-          <p></p>
-          <p></p>
+          <p data-i18n="visual-content"></p>  
+           <p data-i18n="visual-content-p"></p>
           <ul>
             <li>
-              <p></p>
-
+              <p data-i18n="graphic-design"></p>
             </li>
             <li>
-              <p></p>
-
+              <p data-i18n="identity-design"></p>
             </li>
             <li>
-              <p></p>
-
+              <p data-i18n="social-media-design"></p>
             </li>
             <li>
-              <p></p>
-
+              <p data-i18n="social-media-camping"></p>
             </li>
           </ul>
         </div>
       </section>
-
     </main>
     <footer></footer>
     <script src="js/index.js"></script>
