--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
         <p class="multi-container-2-header" data-i18n="multi-container-2-header"></p>
 
       </section>
-      <section id="compelete">
-        <div class="container-2">
-          <ul>
+      <section id="complete">
+        <div class="container">
+          <ul class="multi-list">
             <li>
               <p data-i18n="prints"></p>
             </li>
@@ -207,9 +207,13 @@
               <p data-i18n="motion-graphics"></p>
             </li>
           </ul>
-          <p data-i18n="visual-content"></p>  
-           <p data-i18n="visual-content-p"></p>
-          <ul>
+          <div class="visual-container">
+            <div class="visual-content-container">
+              <p data-i18n="visual-content"></p>  
+            </div>
+            <p class="visual-content-p" data-i18n="visual-content-p"></p>
+          </div>
+          <ul class="types-of-visual">
             <li>
               <p data-i18n="graphic-design"></p>
             </li>
