Finish before footer section

--- a/index.html
+++ b/index.html
@@ -229,8 +229,16 @@
           </ul>
         </div>
       </section>
+      <section id="before-footer">
+        <div class="container">
+          <p data-i18n="before-footer"></p>      
+          <img src="./images/before-footer-logo.png" alt="">
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      
+  </footer>
     <script src="js/index.js"></script>
   </body>
 </html>
