--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#who-us" data-i18n="who-us"></a></li>
             <li><a href="#creativity" data-i18n="creativity"></a></li>
             <li><a href="#team" data-i18n="team"></a></li>
-            <li><a href="#serves" data-i18n="serves"></a></li>
+            <li><a href="#servies" data-i18n="serves"></a></li>
           </ul>
           <ul class="languages">
             <li>
@@ -237,7 +237,53 @@
       </section>
     </main>
     <footer>
-      
+      <div>
+        <div class="form">
+          <h1 data-i18n="contact-us"></h1>
+          <form action="">
+            <input type="email" placeholder="البريد الالكتروني" />
+            <button type="submit" data-i18n="send"></button>
+          </form>
+        </div>
+        <ul class="foot-nav">
+          <li><a href="#who-us" data-i18n="who-us"></a></li>
+          <li><a href="#creativity" data-i18n="creativity"></a></li>
+          <li><a href="#team" data-i18n="team"></a></li>
+          <li><a href="#servies" data-i18n="serves"></a></li>
+        </ul>
+        <div class="logo">
+          <img src="./images/before-footer-logo.png" alt="logo" />
+          <div class="list">
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="./images/feacbook.png" alt="facebook">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="./images/instagram.png" alt="instagram">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="./images/x.png" alt="twitter">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="./images/linkedin.png" alt="linkedin">
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="./images/whatsapp.png" alt="whatsapp">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
   </footer>
     <script src="js/index.js"></script>
   </body>
