--- a/index.html
+++ b/index.html
@@ -116,8 +116,13 @@
           <div class="team-img">
             <img src="./images/team.png" alt="team" />
             <div class="team-p-container">
-              <p>
-              <span>لدينا </span> فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من <span>الجــــــــــــــــــــــــودة والاحترافية.</span></p> </div>
+              <p class="team-des-ar">
+              <span>لدينا </span> فريق عمل مدرب ومبدع، قادر على إنجاز المهام  وتنفيذها بأعلى مستوى من <span>الجــــــــــــــــــــــــودة والاحترافية.</span>
+              </p> 
+              <p class="team-des-en">
+                We have a trained and creative team capable of accomplishing tasks and executing them at the highest level of quality and professionalism.
+              </p>
+            </div>
           </div>
           <img class="line" src="./images/line.png" alt="line" />
         </div>
