Finish desctop design en and ar

--- a/index.html
+++ b/index.html
@@ -195,11 +195,12 @@
           <div class="left-container">
             <p data-i18n="account-mange" ></p>
             <p data-i18n="account-mange-p"></p>
-            <p data-i18n="media-data"></p>
+            <p class="meulti-head-ar" data-i18n="media-data"></p>
+            <p  class="meulti-head-en" data-i18n="multi-container-2-header"></p>
           </div>
         </div>
-        <p class="multi-container-2-header" data-i18n="multi-container-2-header"></p>
-
+        <p class="meulti-head-ar multi-container-2-header" data-i18n="multi-container-2-header"></p>
+        <p class="meulti-head-en multi-container-2-header" data-i18n="media-data"></p>
       </section>
       <section id="complete">
         <div class="container">
@@ -248,7 +249,7 @@
         <div class="form">
           <h1 data-i18n="contact-us"></h1>
           <form action="">
-            <input type="email" placeholder="البريد الالكتروني" />
+            <input type="email"   />
             <button type="submit" data-i18n="send"></button>
           </form>
         </div>
