Add responsive for Arabic

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="container">
-        <nav>
+        <nav class="nav-desktop">
           <ul>
             <li><a href="#who-us" data-i18n="who-us"></a></li>
             <li><a href="#creativity" data-i18n="creativity"></a></li>
@@ -28,6 +28,14 @@
           </ul>
           <img src="./images/logo.png" alt="logo" />
         </nav>
+        <nav class="mobile-nav">  
+            <button>
+          <img src="./images/burger.png" alt="menu" />
+        </button>
+        <div>
+          <img src="./images/logo.png" alt="logo" />
+        </div>
+        </nav>
       </div>
     </header>
     <main>
@@ -41,13 +49,17 @@
               <h1 data-i18n="welcome-p1"></h1>
               <h1 data-i18n="welcome-p2"></h1>
             </div>
+            <div class="welcom-mob">
+              <h1 data-i18n="welcome-p1-mob"></h1>
+              <h1 data-i18n="welcome-p2-mob"></h1>
+            </div>
             <img
               class="arabic-man"
               src="./images/person.png"
               alt="arabic-man"
             />
           </div>
-          <img class="line" src="./images/line.png" alt="line" />
+            <img class="line" src="./images/line.png" alt="line" />
         </div>
       </section>
       <section id="who-us">
@@ -175,11 +187,8 @@
           <div class="lamp-container">
             <img src="./images/lamp.png" alt="lamp">
           </div>
-          <!-- <img class="cross-line-left" src="./images/crossline-left.png" alt="cross-line">  -->
         </div>
-        <div class="images">
-            <img src="./images/line.png" alt="">
-        </div>
+        <img class="line" src="./images/line.png" alt="line" />
       </div>
       </section>
       <section id="multi">
@@ -260,7 +269,7 @@
           <li><a href="#servies" data-i18n="serves"></a></li>
         </ul>
         <div class="logo">
-          <img src="./images/before-footer-logo.png" alt="logo" />
+          <img src="./images/footer-logo.png" alt="logo" />
           <div class="list">
             <ul>
               <li>
