Fix servies section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
             <p data-i18n="serves-box"></p>
           </div>
-          <div class="box-serves-p">
+          <!-- <div class="box-serves-p">
               <p data-i18n="serves-box-p1"></p>
               <p data-i18n="serves-box-p2"></p>
           </div>
@@ -165,6 +165,25 @@
             <div class="img-container">
               <img src="./images/nm.png" alt="laptop">
             </div>
+          </div> -->
+          <div class="markting-container">
+            <div class="step">
+                <div class="step-p">
+                  <p data-i18n="serves-box-p1"></p>
+                </div>
+                <div class="step-img">
+                  <img src="./images/cc.png" alt="camera">
+                </div>
+            </div>
+            <div class="step">
+              <div class="step-p">
+                <p data-i18n="serves-box-p2"></p>
+              </div>
+              <div class="step-img">
+                <img src="./images/nm.png" alt="laptop">
+              </div>
+            </div>
+      
           </div>
           <img class="line" src="./images/line.png" alt="line" />
         </div>
