Fix toogle functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
        
         </nav>
-        <nav class="mobile-nav">  
+        <nav class="mobile-nav" >  
             <button onclick="toggleMenu()">
           <img src="./images/burger.png" alt="menu" />
         </button>
@@ -38,13 +38,13 @@
         </div>
         </nav>
       </div>
-      <div id="burger" class="menu">
+      <div id="burger" class="menu" onclick="toggleMenu()">
         <div>
           <button  onclick="toggleMenu()">
              X
           </button>
         </div>
-        <img src="./images/logo.png" alt="logo" />
+        <img src="./images/before-footer-logo.png" alt="logo" />
         <ul>
           <li><a href="#who-us" data-i18n="who-us"></a></li>
           <li><a href="#creativity" data-i18n="creativity"></a></li>
