Fix toogle functionality

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>
       </div>
       <div id="burger" class="menu" onclick="toggleMenu()">
-        <div>
+        <div onclick="toggleMenu()">
           <button  onclick="toggleMenu()">
              X
           </button>
