style toggle menue

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         </nav>
       </div>
       <div id="burger" class="menu" onclick="toggleMenu()">
-        <div onclick="toggleMenu()">
+        <div class="burger-item" onclick="toggleMenu()">
           <button  onclick="toggleMenu()">
              X
           </button>
         </div>
-        <img src="./images/before-footer-logo.png" alt="logo" />
+        <div>
+          <img src="./images/before-footer-logo.png" alt="logo" />
+        </div>
         <ul>
           <li><a href="#who-us" data-i18n="who-us"></a></li>
           <li><a href="#creativity" data-i18n="creativity"></a></li>
