--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <div>
         <div class="form">
           <h1 data-i18n="contact-us"></h1>
-          <form action="">
+          <form action="process_form.php" method="post">
             <input type="email"   />
             <button type="submit" data-i18n="send"></button>
           </form>
@@ -310,12 +310,12 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://www.instagram.com/7letters_sa">
                   <img src="./images/instagram.png" alt="instagram">
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://x.com/7letters_sa">
                   <img src="./images/x.png" alt="twitter">
                 </a>
               </li>
@@ -325,7 +325,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://wa.link/m0yx6e">
                   <img src="./images/whatsapp.png" alt="whatsapp">
                 </a>
               </li>
